# flappy_bird-sfml

./: .gitignore  CMakeLists.txt  LICENSE  README.md
game/: package.ps1  setup_script.iss
scripts/: cmake.bat
src/: main.cpp
